# Official documentation: https://python-poetry.org/docs/pyproject/

[tool.poetry]
name        = "gitpy"
description = "A Python3 utility for search and download a Git's repository directly from the terminal across different platform."
license     = "GPL-3.0-only"
version     = "1.0.0.0-dev"
authors     = [ 
    "Thomas Pellissier <thomas.pellissier.pro@proton.me>",
]
maintainers = [
    "Thomas Pellissier <thomas.pellissier.pro@proton.me>",
]
readme      = "README.md"
repository  = "https://github.com/dedoot/gitpy"
keywords    = [
    "git",
    "api",
    "github",
    "gitlab",
    "terminal",
    "cli",
    "utility",
    "python",
    "python3",
    "python3.9",
    "python3.10",
    "python3.11",
    ]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: Linux's distributions (Only Debian and Arch based)",
    "Programming Language :: Python :: 3.9 -> 3.11.6",
    "Topic :: Terminals",
    "Topic :: Utilities"
]

packages    = [
    {include = "gitpy"},
    ]

include     = [
    "CHANGELOG.md",
    "CODE_OF_CONDUCT.md",
    "CODE_GUIDELINES.md",
    "CONTRIBUTING.md",
    "LICENSE",
]

[tool.poetry.dependencies]
bcrypt              = "4.0.1"  # For security
colored             = "2.2.2"
crontab             = "1.0.1"
cryptography        = "41.0.2" # For security
dbus-python         = "1.3.2"  # For security
gitpython           = "3.1.35"
importlib           = "1.0.4"
importlib-metadata  = "6.8.0"
keyring             = "24.2.0" # For security
packaging           = "23.1"
pathvalidate        = "3.2.0"
poetry              = "1.6.1"
progressbar         = "2.5"
python              = ">=3.9, <= 3.11.6"
pyyaml              = "6.0.1"
semantic_version    = "2.10.0"
setuptools          = "68.1.2"
simple-term-menu    = "1.6.1"
shtab               = "1.6.2"
requests            = "2.31.0"
rich                = "13.4.2"
toml                = "0.10.2"
urllib3             = "2.0.3"
wget                = "3.2"
yq = "^3.2.3"

[tool.poetry.group.dev.dependencies]
black               = "^23.3.0" # code formatting
isort               = "^5.12.0" # import sorting
sphinx              = "^7.2.5"  # manpage generation

[build-system]
requires            = ["poetry-core","poetry","curl","wget","git"]
build-backend       = "poetry.core.masonry.api"
